classDiagram
    class Common {
        - UUID id
        - Long createdAt
        - Long updateAt
        + getId() UUID
        + getCreatedAt() Long
        + getUpdateAt() Long
        + setUpdateAt(Long) Long
    }

    class Message {
        - String senderId
        - String messageContent
        - String reciverId
        + getSenderId() String
        + getMessageContent() String
        + getReciverId() String
        + setSenderId(String)
        + setMessageContent(String)
        + setReciverId(String)
    }

    class Channel {
        - String channelName
        - String channelDescription
        + getChannelName() String
        + getChannelDescription() String
        + setChannelName(String)
        + setChannelDescription(String)
    }

    class User {
        - String userName
        - String userEmail
        + getUserName() String
        + getUserEmail() String
        + setUserName(String)
        + setUserEmail(String)
    }

%% 상속 관계
    Common <|-- Message
    Common <|-- Channel
    Common <|-- User


    